# inmoov_core_orig

./: .gitignore  README.md  README.rst
docs/: 3dprinting.rst  conf.py  index.rst  rst-cheatsheet.rst  setup.rst  troubleshoot.rst
docs/_build/doctrees/: index.doctree
docs/_build/html/: .buildinfo  objects.inv
inmoov/: CMakeLists.txt  package.xml
inmoov.old/include/: export_yaml.py
inmoov.old/launch/: base.launch
inmoov.old/nodes/: joint_command_dispatcher.py  motor_status_dispatcher.py
inmoov/config/: servo_config.yaml
inmoov/launch/: easyjoint.launch  easyjoint2.launch  inmoov.launch  rqt_console.launch  rviz.launch
inmoov/nodes/: joint_status_dispatcher.py
inmoov/scripts/: generate_config_xacro.py
inmoov/tools/enable_manager/: enable_manager.py
inmoov_bringup/: CMakeLists.txt  package.xml
inmoov_bringup/src/: inmoov_bringup.cpp
inmoov_core/: .gitignore  README.md
inmoov_core/src/: CMakeLists.txt  package.xml
inmoov_core/src/description/misc/: other_commands.sh
inmoov_core/src/description/robots/: README.md  asmTorso.urdf.xacro  inmoov.urdf  inmoov_right_hand.urdf.xacro  robot_core.xacro
inmoov_core/src/description/urdf/: asmFace.urdf.xacro  config.joints.urdf.xacro  inmoov.gazebo
inmoov_core/src/docs/: conf.py
inmoov_core/src/docs/pages/: 3dprinting.rst  _template.rst  build_via_rosdep.rst  dashboard.rst  game_engine.rst  gpt4.rst  inmoov_modules.rst  launch.rst  motor_control.rst  ros-cheatsheet.rst  ros_idl.rst  setup_microros.rst  setup_ros.rst  setup_ros_workspace.rst  troubleshoot.rst  working_packages.rst  z_why.rst
inmoov_core/src/launch/: ar.launch.py  example.launch.py  global.launch.py  inmoov_talker_listener.launch.py  launch_sim.launch.py
inmoov_core/src/world/: cafe.world  empty.world  obstacles.world
inmoov_description/: CMakeLists.txt  package.xml
inmoov_description/urdf/: asmArm.urdf.xacro  asmEye.urdf.xacro  asmFace.urdf.xacro  asmHand.urdf.xacro  asmHead.urdf copy.xacro  asmTorso.urdf.xacro  camera_sensor.urdf.xacro  config.inertial.urdf.xacro  config.joints.urdf.xacro  easyjoint.urdf copy.xacro  easyjoint.urdf.xacro  generate_urdf.sh  inmoov.transmission.urdf.xacro  inmoov_description.urdf  inmoov_description.urdf.xacro  model.config  model_calc.ods
inmoov_gazebo/: CMakeLists.txt  package.xml
inmoov_gazebo/gazebo/: inmoov.gazebo
inmoov_gazebo/launch/: easygazebo.launch  empty_world.launch
inmoov_gazebo/models/: readme.md
inmoov_gazebo/models/table/: model.config  model.dae  model.sdf
inmoov_gazebo/worlds/: inmoov_gazebo.world  inmoov_gazebo2.world
inmoov_rviz/: CMakeLists.txt  package.xml
inmoov_rviz/launch/: inmoov_rviz.launch
inmoov_rviz/rviz/: inmoov.rviz
src/: README.md
src/config/: conf.rviz
src/description/robots/: inmoov2.urdf  r2d2.urdf
src/docs/: 3dprinting.rst  conf.py  index.rst  lore.rst  setup.rst
src/docs/pages/:  moveit2.rst  3dprinting.rst  _template.rst  bom.rst  create_packages.rst  dashboard.rst  gpt3.rst  inmoov_modules.rst  joint_state.rst  lore.rst  microros.rst  microros_run.rst  moveit2.rst  ros-cheatsheet.rst  rqt.rst  rst-cheatsheet.rst  sensory_hearing.rst  setup.rst  setup_compiler.rst  setup_cubemx_ide.rst  setup_microros.rst  setup_ros.rst  setup_ros_workspace.rst  setup_ros_ws.rst  setup_toolchain.rst  setup_ubuntu.rst  setup_vscode.rst  stm32_mcu_config.rst  telemetry.rst  todo.rst  troubleshoot.rst  upython.rst  urdf.rst  why.rst  ws_nodes.rst  yolov4.rst  z_lore.rst
src/inmoov/: CMakeLists.txt  package.xml
src/inmoov/launch/: inmoov_bringup.launch.py  inmoov_talker.launch.py
src/inmoov_awaken/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/inmoov_awaken/inmoov_awaken/: base_led_status.py  base_motor_controller.py
src/inmoov_awaken/src/: main.py
src/inmoov_awaken_py/: package.xml  setup.cfg  setup.py
src/inmoov_awaken_py/inmoov_awaken_py/: base_motor_controller.py
src/inmoov_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/inmoov_bringup/config/: conf.rviz
src/inmoov_bringup/launch/: ar.launch.py  conf.rviz  conf2.rviz  ex.launch.py  global-copy.launch.py  global.launch copy.py  global.launch.py  inmoov.launch.py  inmoov_launch_all.launch copy.py  inmoov_state_publisher.launch.py  robot_state_publisher.launch.py  rsp.launch.py  sim.launch.py  template.launch copy.py
src/inmoov_bringup/src/: inmoov_bringup.cpp
src/inmoov_core/config/: joystick.yaml
src/inmoov_description/: CMakeLists.txt  README.md  package.xml
src/inmoov_description/description/: example_robot.urdf.xacro
src/inmoov_description/meshes/: bicep.dae  bicep.stl  launch_rviz.sh
src/inmoov_description/misc/: convert_xacro.sh  other_commands.sh
src/inmoov_description/robots/: example_robot.urdf.xacro  inmoov.broke.urdf.xacro  inmoov.urdf  inmoov.urdf.backup.xacro  inmoov.urdf.xacro  robot_core.xacro
src/inmoov_description/urdf/: asmTorso.urdf.xacro  config.joints.urdf.xacro
src/inmoov_gazebo/: CMakeLists.txt
src/inmoov_ignition/: CMakeLists.txt  package.xml
src/inmoov_meshes/: CMakeLists.txt  package.xml
src/inmoov_microros_stm32f446re/: CMakeLists.txt  package.xml
src/inmoov_msgs/: CMakeLists.txt  package.xml
src/inmoov_navigation/: CMakeLists.txt  package.xml
src/inmoov_neopixel/: CMakeLists.txt  package.xml
src/inmoov_neopixel/src/: inmoov_neopixel.cpp
src/inmoov_publisher/: CMakeLists.txt  package.xml
src/inmoov_publisher/src/: inmoov_publisher.cpp
src/inmoov_pubsub/: CMakeLists.txt  package.xml
src/inmoov_rviz/: CMakeLists.txt
src/inmoov_service/: CMakeLists.txt  package.xml
src/inmoov_slam/: CMakeLists.txt  package.xml
src/inmoov_telemetry/: CMakeLists.txt  package.xml
src/inmoov_teleop/: CMakeLists.txt  package.xml
src/launch/: inmoov-adv.launch.py  joystick.launch.py
src/misc/: README.md  base_motor_controller.py  main.py  oopNode.py  pypackage.txt  pypackage2.txt
src/template_pkg_cpp/: CMakeLists.txt  package.xml
src/template_pkg_cpp/src/: template_pkg_cpp.cpp
src/template_pkg_py/: package.xml  setup.cfg  setup.py
src/test_depend/: CMakeLists.txt  package.xml
(+10 files in other folders)
