<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inmoov_bringup</name>
  <version>0.0.0</version>
  <description>InMoov for ROS2 launch and support packages</description>
  <maintainer email="gckemper@gmail.com">gkemper</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- These two are just needed for some tutorial stuff using ROS demo packages. -->
  <!-- We might not need them later.   -->
  <exec_depend>demo_nodes_cpp</exec_depend>
  <exec_depend>demo_nodes_py</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
